// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin_console/team_channel_settings/channel/ChannelMembers > should match snapshot 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="channelMembers"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Members
        </h3>
        <div
          class="mt-2"
        >
          A list of users who are currently in the channel right now
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="style--none btn btn-primary"
          id="addChannelMembers"
        >
          Add Members
        </button>
      </div>
    </div>
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_guest"
                        name="system_guest"
                        type="checkbox"
                      />
                      Guest
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="channel_user"
                        name="channel_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="channel_admin"
                        name="channel_admin"
                        type="checkbox"
                      />
                      Channel Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
        >
          Role
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 240px;"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 3;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/user-1/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
              >
                <span>
                  some-user -  
                </span>
                <span
                  class="ug-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          />
          <div
            class="DataGrid_cell"
            style="overflow: visible;"
          >
            <div
              class="MenuWrapper "
            >
              <button
                aria-expanded="true"
                class="dropdown-toggle theme color--link style--none"
                id="userGridRoleDropdown_some-user"
                type="button"
              >
                <span>
                  Member
                   
                </span>
                <i
                  class="fa fa-angle-down"
                  title="Dropdown Icon"
                />
              </button>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <div
              class="UserGrid_removeRow"
            >
              <a
                class=""
                href="#"
                role="button"
              >
                Remove
              </a>
            </div>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 3;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/user-2/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
              >
                <span>
                  some-user -  
                </span>
                <span
                  class="ug-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          />
          <div
            class="DataGrid_cell"
            style="overflow: visible;"
          >
            <div
              class="MenuWrapper "
            >
              <button
                aria-expanded="true"
                class="dropdown-toggle theme color--link style--none"
                id="userGridRoleDropdown_some-user"
                type="button"
              >
                <span>
                  Member
                   
                </span>
                <i
                  class="fa fa-angle-down"
                  title="Dropdown Icon"
                />
              </button>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <div
              class="UserGrid_removeRow"
            >
              <a
                class=""
                href="#"
                role="button"
              >
                Remove
              </a>
            </div>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 3;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/user-3/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
              >
                <span>
                  some-user -  
                </span>
                <span
                  class="ug-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          />
          <div
            class="DataGrid_cell"
            style="overflow: visible;"
          >
            <div
              class="MenuWrapper "
            >
              <button
                aria-expanded="true"
                class="dropdown-toggle theme color--link style--none"
                id="userGridRoleDropdown_some-user"
                type="button"
              >
                <span>
                  Member
                   
                </span>
                <i
                  class="fa fa-angle-down"
                  title="Dropdown Icon"
                />
              </button>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <div
              class="UserGrid_removeRow"
            >
              <a
                class=""
                href="#"
                role="button"
              >
                Remove
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 3 of 3
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelMembers > should match snapshot loading no users 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="channelMembers"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Members
        </h3>
        <div
          class="mt-2"
        >
          A list of users who are currently in the channel right now
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="style--none btn btn-primary"
          id="addChannelMembers"
        >
          Add Members
        </button>
      </div>
    </div>
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_guest"
                        name="system_guest"
                        type="checkbox"
                      />
                      Guest
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="channel_user"
                        name="channel_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="channel_admin"
                        name="channel_admin"
                        type="checkbox"
                      />
                      Channel Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
        >
          Role
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 0px;"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;
